--- a/app/src/main/res/layout/fragment_frlshins.xml
+++ b/app/src/main/res/layout/fragment_frlshins.xml
@@ -415,24 +415,37 @@
                 android:layout_alignEnd="@+id/linearLayout2"
                 android:layout_below="@+id/tt14"
                 android:gravity="center"/>
+
             <TextView
-                android:layout_width="wrap_content"
-                android:layout_height="36dp"
+                android:layout_width="180sp"
+                android:layout_height="wrap_content"
+                android:textAppearance="?android:attr/textAppearanceMedium"
                 android:text="@string/base1_details"
                 android:id="@+id/base1_details"
                 android:gravity="center"
                 android:textStyle="bold"
-                android:textColor="@color/Black"
+                android:textColor="#000"
                 android:textAlignment="center"
+                android:layout_below="@+id/tt15"
+                android:layout_marginTop="20sp"
+                 />
+            <TextView
+                android:layout_width="wrap_content"
+                android:layout_height="50sp"
+                android:textAppearance="?android:attr/textAppearanceMedium"
+                android:gravity="center"
+                android:text="218.5"
+                android:layout_alignParentBottom="true"
+                android:layout_toEndOf="@+id/rn4"
+                android:layout_marginStart="42dp"
+                android:textColor="@color/Black"
+                android:textStyle="bold"
+                android:textSize="20sp"
                 android:layout_gravity="center"
-                android:layout_below="@+id/rn15"
-                android:layout_marginStart="40sp"
-                android:layout_marginRight="0sp"
-                android:background="@color/colorAccent"
                 />
 
         </RelativeLayout>
 
-
     </ScrollView>
+
 </FrameLayout>
