--- a/app/src/main/res/layout/fragmentbase_10.xml
+++ b/app/src/main/res/layout/fragmentbase_10.xml
@@ -80,7 +80,7 @@
                 android:layout_height="wrap_content"
                 android:textAppearance="?android:attr/textAppearanceMedium"
                 android:layout_marginTop="10sp"
-                android:text="@string/rn24"
+                android:text="@string/rn19"
                 android:textColor="#000"
                 android:id="@+id/rn4"
                 android:textAlignment="center"
@@ -103,7 +103,7 @@
                 android:layout_height="wrap_content"
                 android:textAppearance="?android:attr/textAppearanceMedium"
                 android:layout_marginTop="10sp"
-                android:text="@string/rn11"
+                android:text="@string/rn25"
                 android:textColor="#000"
                 android:id="@+id/rn6"
                 android:textAlignment="center"
@@ -346,7 +346,7 @@
             <TextView
                 android:layout_width="150sp"
                 android:layout_height="wrap_content"
-                android:text="3.5"
+                android:text="4"
                 android:id="@+id/tt10"
                 android:textStyle="bold"
                 android:textColor="#000"
@@ -416,20 +416,31 @@
                 android:layout_below="@+id/tt14"
                 android:gravity="center"/>
             <TextView
-                android:layout_width="wrap_content"
-                android:layout_height="36dp"
+                android:layout_width="180sp"
+                android:layout_height="wrap_content"
+                android:textAppearance="?android:attr/textAppearanceMedium"
                 android:text="@string/base1_details"
                 android:id="@+id/base1_details"
                 android:gravity="center"
                 android:textStyle="bold"
-                android:textColor="@color/Black"
+                android:textColor="#000"
                 android:textAlignment="center"
-                android:layout_gravity="center"
-                android:layout_below="@+id/rn15"
-                android:layout_marginStart="40sp"
-                android:layout_marginRight="0sp"
-                android:background="@color/colorAccent"
+                android:layout_below="@+id/tt15"
+                android:layout_marginTop="20sp"
                 />
+            <TextView
+                android:layout_width="wrap_content"
+                android:layout_height="50sp"
+                android:textAppearance="?android:attr/textAppearanceMedium"
+                android:gravity="center"
+                android:text="250.9"
+                android:layout_marginStart="36dp"
+                android:textColor="@color/Black"
+                android:textStyle="bold"
+                android:textSize="20sp"
+                android:layout_gravity="center"
+                android:layout_alignTop="@+id/base1_details"
+                android:layout_toEndOf="@+id/rn3" />
 
         </RelativeLayout>
 
