--- a/app/src/main/res/layout/fragmentbase_4.xml
+++ b/app/src/main/res/layout/fragmentbase_4.xml
@@ -103,7 +103,7 @@
                 android:layout_height="wrap_content"
                 android:textAppearance="?android:attr/textAppearanceMedium"
                 android:layout_marginTop="10sp"
-                android:text="@string/rn11"
+                android:text="@string/rn6"
                 android:textColor="#000"
                 android:id="@+id/rn6"
                 android:textAlignment="center"
@@ -136,7 +136,7 @@
                 android:layout_height="wrap_content"
                 android:textAppearance="?android:attr/textAppearanceMedium"
                 android:layout_marginTop="10sp"
-                android:text="@string/rn21"
+                android:text="@string/rn9"
                 android:textColor="#000"
                 android:id="@+id/rn9"
                 android:textAlignment="center"
@@ -250,7 +250,7 @@
             <TextView
                 android:layout_width="150sp"
                 android:layout_height="wrap_content"
-                android:text="36"
+                android:text="26"
                 android:textStyle="bold"
                 android:textColor="#000"
                 android:id="@+id/tt2"
@@ -262,7 +262,7 @@
             <TextView
                 android:layout_width="150sp"
                 android:layout_height="wrap_content"
-                android:text="26"
+                android:text="18"
                 android:id="@+id/tt3"
                 android:textColor="#000"
                 android:textStyle="bold"
@@ -286,7 +286,7 @@
             <TextView
                 android:layout_width="150sp"
                 android:layout_height="wrap_content"
-                android:text="5"
+                android:text="4.2"
                 android:textStyle="bold"
                 android:textColor="#000"
                 android:id="@+id/tt5"
@@ -298,7 +298,7 @@
             <TextView
                 android:layout_width="150sp"
                 android:layout_height="wrap_content"
-                android:text="1"
+                android:text="0.2"
                 android:textStyle="bold"
                 android:textColor="#000"
                 android:id="@+id/tt6"
@@ -310,7 +310,7 @@
             <TextView
                 android:layout_width="150sp"
                 android:layout_height="wrap_content"
-                android:text="1"
+                android:text="0.8"
                 android:textStyle="bold"
                 android:textColor="#000"
                 android:id="@+id/tt7"
@@ -346,7 +346,7 @@
             <TextView
                 android:layout_width="150sp"
                 android:layout_height="wrap_content"
-                android:text="2.5"
+                android:text="6"
                 android:id="@+id/tt10"
                 android:textStyle="bold"
                 android:textColor="#000"
@@ -370,7 +370,7 @@
             <TextView
                 android:layout_width="150sp"
                 android:layout_height="wrap_content"
-                android:text="1"
+                android:text="0.5"
                 android:textStyle="bold"
                 android:textColor="#000"
                 android:id="@+id/tt12"
@@ -382,7 +382,7 @@
             <TextView
                 android:layout_width="150sp"
                 android:layout_height="wrap_content"
-                android:text="6"
+                android:text="4"
                 android:id="@+id/tt13"
                 android:textColor="#000"
                 android:textStyle="bold"
@@ -394,7 +394,7 @@
             <TextView
                 android:layout_width="150sp"
                 android:layout_height="wrap_content"
-                android:text="32"
+                android:text="27"
                 android:id="@+id/tt14"
                 android:textStyle="bold"
                 android:textColor="#000"
@@ -406,7 +406,7 @@
             <TextView
                 android:layout_width="150sp"
                 android:layout_height="wrap_content"
-                android:text="30"
+                android:text="24"
                 android:id="@+id/tt15"
                 android:textColor="#000"
                 android:textStyle="bold"
@@ -416,20 +416,31 @@
                 android:layout_below="@+id/tt14"
                 android:gravity="center"/>
             <TextView
-                android:layout_width="wrap_content"
-                android:layout_height="36dp"
+                android:layout_width="180sp"
+                android:layout_height="wrap_content"
+                android:textAppearance="?android:attr/textAppearanceMedium"
                 android:text="@string/base1_details"
                 android:id="@+id/base1_details"
                 android:gravity="center"
                 android:textStyle="bold"
-                android:textColor="@color/Black"
+                android:textColor="#000"
                 android:textAlignment="center"
-                android:layout_gravity="center"
-                android:layout_below="@+id/rn15"
-                android:layout_marginStart="40sp"
-                android:layout_marginRight="0sp"
-                android:background="@color/colorAccent"
+                android:layout_below="@+id/tt15"
+                android:layout_marginTop="20sp"
                 />
+            <TextView
+                android:layout_width="wrap_content"
+                android:layout_height="50sp"
+                android:textAppearance="?android:attr/textAppearanceMedium"
+                android:gravity="center"
+                android:text="220.6"
+                android:layout_marginStart="36dp"
+                android:textColor="@color/Black"
+                android:textStyle="bold"
+                android:textSize="20sp"
+                android:layout_gravity="center"
+                android:layout_alignTop="@+id/base1_details"
+                android:layout_toEndOf="@+id/rn3" />
 
         </RelativeLayout>
 
