--- a/app/src/main/res/layout/plasticizer.xml
+++ b/app/src/main/res/layout/plasticizer.xml
@@ -17,14 +17,18 @@
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:textSize="20sp"
-                    android:text="@string/bullets"/>
+                    android:text=""/>
                 <TextView
                     android:id="@+id/TextView01"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:layout_weight="1"
+                    android:gravity="center"
                     android:textSize="20sp"
-                    android:text=""/>
+                    android:textStyle="bold"
+                    android:textColor="@color/Black"
+                    android:text="DEFINITION OF PLASTICISERS AND
+PLASTICISATION"/>
             </TableRow>
             <TableRow
                 android:id="@+id/tableRow2"
@@ -44,7 +48,8 @@
                     android:layout_height="wrap_content"
                     android:layout_weight="1"
                     android:textSize="20sp"
-                    android:text=""/>
+                    android:textColor="@color/Black"
+                    android:text="A plasticiser or softener is a substance or material incorporated in a material (usually a plastic or elastomer) to increase its flexibility, workability or distensibility. A plasticiser may reduce the melt viscosity, lower the temperature of the second-order transition or lower the elastic modulus of the melt."/>
             </TableRow>
             <TableRow
                 android:id="@+id/tableRow4"
@@ -64,7 +69,8 @@
                     android:layout_height="wrap_content"
                     android:layout_weight="1"
                     android:textSize="20sp"
-                    android:text=""/>
+                    android:textColor="@color/Black"
+                    android:text="Plasticisers may be divided into two groups-primary and secondary-with the rather arbitrary division between them depending mainly on their compatibility with the resins. Primary plasticisers are highly compatible with PVC polymers up to at least 150 phr. Secondary plasticisers are less compatible, and are generally used in mixtures with a primary plasticiser in order to confer some special balance of properties. The extenders form a branch of this group; they have a very limited compatibility, but may be included in plasticised compositions as a part-replacement for other plasticisers to reduce cost."/>
             </TableRow>
             <TableRow
                 android:id="@+id/tableRow5"
@@ -84,7 +90,9 @@
                     android:layout_height="wrap_content"
                     android:layout_weight="1"
                     android:textSize="20sp"
-                    android:text=""/>
+                    android:textColor="@color/Black"
+                    android:text="PVC is basically rigid at normal temperature. This is due to the short distances between the molecules since there are strong pulling forces between them (intermolecular forces). When heated, the energies of molecular motions become greater than the intermolecular forces, which widen molecular distances, resulting in softening of the resin. When plasticizers are added to PVC at this stage, the plasticiser molecules make their way between the PVC molecules and prevent the PVC polymer molecules from coming closer with each other. Consequently the polymer molecules are kept apart even at normal temperature and softness is maintained. This is the role of plasticisers and such process is technically called plasticising.
+"/>
             </TableRow>
             <TableRow
                 android:id="@+id/tableRow6"
@@ -104,7 +112,8 @@
                     android:layout_height="wrap_content"
                     android:layout_weight="1"
                     android:textSize="20sp"
-                    android:text=""/>
+                    android:textColor="@color/Black"
+                    android:text="PVC polymer molecules have positive and negative polarities inside, while plasticiser molecules also have such polar and non-polar parts. The PVC polymer molecules and the plasticizer molecules are electrically attracted to each other, and the non-polar parts widen the distance among the polymer molecules to keep softness. PVC products which are softened by plasticisers are called soft (flexible) PVC products. "/>
             </TableRow>
             <TableRow
                 android:id="@+id/tableRow7"
@@ -118,113 +127,15 @@
                     android:text="@string/bullets"
                     android:textSize="20sp"
                     android:textStyle="bold"/>
-                <TextView
-                    android:id="@+id/TextView07"
+                <ImageView
+                    android:id="@+id/plasticizer_image"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:layout_weight="1"
                     android:textSize="20sp"
-                    android:text=""/>
-            </TableRow>
-            <TableRow
-                android:id="@+id/tableRow8"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                >
-                <TextView
-                    android:id="@+id/bullet8"
-                    android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
-                    android:text="@string/bullets"
-                    android:textSize="20sp"
-                    android:textStyle="bold"/>
-                <TextView
-                    android:id="@+id/TextView08"
-                    android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
-                    android:layout_weight="1"
-                    android:textSize="20sp"
-                    android:text=""/>
-            </TableRow>
-            <TableRow
-                android:id="@+id/tableRow9"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                >
-                <TextView
-                    android:id="@+id/bullet9"
-                    android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
-                    android:text="@string/bullets"
-                    android:textSize="20sp"
-                    android:textStyle="bold"/>
-                <TextView
-                    android:id="@+id/TextView09"
-                    android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
-                    android:layout_weight="1"
-                    android:textSize="20sp"
-                    android:text=""/>
-            </TableRow>
-            <TableRow
-                android:id="@+id/tableRow10"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                >
-                <TextView
-                    android:id="@+id/bullet10"
-                    android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
-                    android:text="@string/bullets"
-                    android:textSize="20sp"
-                    android:textStyle="bold"/>
-                <TextView
-                    android:id="@+id/TextView10"
-                    android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
-                    android:layout_weight="1"
-                    android:textSize="20sp"
-                    android:text=""/>
-            </TableRow>
-            <TableRow
-                android:id="@+id/tableRow11"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                >
-                <TextView
-                    android:id="@+id/bullet11"
-                    android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
-                    android:text="@string/bullets"
-                    android:textSize="20sp"
-                    android:textStyle="bold"/>
-                <TextView
-                    android:id="@+id/TextView11"
-                    android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
-                    android:layout_weight="1"
-                    android:textSize="20sp"
-                    android:text=""/>
-            </TableRow>
-            <TableRow
-                android:id="@+id/tableRow12"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                >
-                <TextView
-                    android:id="@+id/bullet12"
-                    android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
-                    android:text="@string/bullets"
-                    android:textSize="20sp"
-                    android:textStyle="bold"/>
-                <TextView
-                    android:id="@+id/TextView12"
-                    android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
-                    android:layout_weight="1"
-                    android:textSize="20sp"
-                    android:text=""/>
+                    android:scaleType="fitXY"
+                    android:adjustViewBounds="true"
+                    android:src="@drawable/pvc_plasticizer"/>
             </TableRow>
 
             <TableRow
