--- a/app/src/main/res/menu/additives_navigation.xml
+++ b/app/src/main/res/menu/additives_navigation.xml
@@ -24,6 +24,10 @@
                     android:id="@+id/resin4"
                     android:title="@string/resin4"
                     android:icon="@drawable/ic_exit"/>
+                <item
+                    android:id="@+id/kvalue"
+                    android:title="@string/kvalue"
+                    android:icon="@drawable/ic_exit"/>
 
             </group>
         </menu>
