--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -7,4 +7,5 @@
     <color name="applicaionfrontpagebackground">#0000FF</color>
     <color name="White">#FFFFFF</color>
     <color name="Black">#000000</color>
+    <color name="Blue">#0d47a1</color>
 </resources>
