--- a/app/src/main/res/layout/rmtp27.xml
+++ b/app/src/main/res/layout/rmtp27.xml
@@ -2,5 +2,59 @@
 <FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="match_parent">
+    <ScrollView
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content">
+        <HorizontalScrollView
+            android:layout_width="match_parent"
+            android:layout_height="match_parent">
+            <TableLayout
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content">
 
+                <TableRow
+                    android:id="@+id/tr1"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    >
+                    <ImageView
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:layout_rowSpan="2"
+                        android:id="@+id/halogen_gas_1"
+                        android:layout_row="0"
+                        android:layout_column="0"
+                        android:src="@drawable/halogen_gas_1"/>
+                </TableRow>
+                <TableRow
+                    android:id="@+id/tr2"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    >
+                    <ImageView
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:layout_rowSpan="2"
+                        android:id="@+id/halogen_gas_2"
+                        android:layout_row="0"
+                        android:layout_column="0"
+                        android:src="@drawable/halogen_gas_2"/>
+                </TableRow>
+                <TableRow
+                    android:id="@+id/tr3"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    >
+                    <ImageView
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:layout_rowSpan="2"
+                        android:id="@+id/halogen_gas_3"
+                        android:layout_row="0"
+                        android:layout_column="0"
+                        android:src="@drawable/halogen_gas_3"/>
+                </TableRow>
+            </TableLayout>
+        </HorizontalScrollView>
+    </ScrollView>
 </FrameLayout>
