--- a/app/src/main/res/layout/rmtp4.xml
+++ b/app/src/main/res/layout/rmtp4.xml
@@ -3,4 +3,23 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent">
 
-</FrameLayout>
+            <TableLayout
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"/>
+
+                <TableRow
+                    android:id="@+id/tr1"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    >
+                    <ImageView
+                        android:layout_width="wrap_content"
+                        android:layout_height="match_parent"
+                        android:layout_rowSpan="2"
+                        android:id="@+id/acid_value1"
+                        android:layout_row="0"
+                        android:layout_column="0"
+                        android:src="@drawable/aluminium_trioxide"/>
+                </TableRow>
+
+            </FrameLayout>
